Bug #40711 Maria crash in my_no_flags_free
Submitted: 13 Nov 2008 17:47 Modified: 7 May 2009 8:19
Reporter: Philip Stoev Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Maria storage engine Severity:S1 (Critical)
Version:6.0.8 OS:Solaris (10)
Assigned to: CPU Architecture:Any

[13 Nov 2008 17:47] Philip Stoev
Description:
When executing the rpl_sys systemqa test in RBR mode, Maria crashed as follows:

 ffffffff7df4a5a4 abort (0, ffffffff7e0f7f00, 0, 1a1b20, 220, 0) + d0
 ffffffff7ea00d54 free (10e12c790, 10e12ca68, ffffffff7e0f7f00, ffffffff7ea00d34, 8, 10e12c7e0) + 1f4
 000000010098bb8c my_no_flags_free (10e12ca68, 1010e9, 1010e99d8, 1010e99d8, 101000, 0) + c
 000000010092c8c0 _ma_remove_not_visible_states (10e12cd98, 0, 0, 1, 0, 1000000) + 50
 000000010094ba1c maria_close (10e1b27f8, c0, 0, 1, 10e0f8818, 0) + 32c
 0000000100915d78 int ha_maria::close() (10e0e4820, 100915d70, 100d87818, 10e0e4820, 0, 0) + 8
 0000000100404c40 int closefrm(TABLE*,bool) (10e0f6808, 1, 0, 1, 1018f3, 27) + 28
 00000001003f7c18 void intern_close_table(TABLE*) (10e0f6808, 41, 100d3b000, 42, 100d3b, 10e0e4820) + 38
 00000001003f7c34 void free_cache_entry(TABLE*) (10e0f6808, 1018f3000, 1018f3, 101800, 100d3b000, 100d3b) + c
 00000001003f8468 void close_open_tables(THD*) (107c88808, 100d3bad4, 0, 1018f1ad0, 1018f48c8, 1018f3d80) + b4
 00000001003f87b4 void close_thread_tables(THD*,bool) (107c88808, 107c88830, 0, 10e0f6808, 107c888e0, 1800) + 1cc
 00000001004f8c34 int sp_lex_keeper::reset_lex_and_exec_core(THD*,unsigned*,bool,sp_instr*) (10e665958, 107c88808, ffffffff7983d514, 100ae58c1, 10e665918, 1000) + 128
 00000001004f8e78 int sp_instr_stmt::execute(THD*,unsigned*) (10e665918, 107c88808, ffffffff7983d514, 0, 11, 1151e2808) + c8
 00000001004f6e48 bool sp_head::execute(THD*) (1151ea818, 107c88808, 18e0, 10e665918, 1004f8db0, 1800) + 2b0
 00000001004f7d14 bool sp_head::execute_procedure(THD*,List<Item>*) (1151ea818, 107c88808, 107c8ac10, 1568, 0, 10e87ebc8) + 3b8
 00000001003c3070 int mysql_execute_command(THD*) (107c88808, 1018f37f0, 100aca359, 107c8a208, ffffffffffffffff, 0) + 4044
 00000001003c5528 void mysql_parse(THD*,const char*,unsigned,const char**) (107c88808, 1151e2808, 0, ffffffff7983fc48, 107c8a208, 1800) + 154
 00000001003bdac4 bool dispatch_command(enum_server_command,THD*,char*,unsigned) (3, 107c88808, 1151e2819, 18c0, 1018eb000, 1800) + 628
 00000001003bd258 bool do_command(THD*) (107c88808, 11, 15d0, 1400, 7080, 107c8a208) + c8
 00000001003bb580 handle_one_connection (f42, 7e, 1, 18c0, 107c88920, 100cef8a0) + 14c
 ffffffff7dfd266c _lwp_start (0, 0, 0, 0, 0, 0)

How to repeat:
If this is repeatable, a test case will be provided. The machine in question is tor03, which has a particular hardware architecture and performance profile.
[13 Nov 2008 17:48] Philip Stoev
Thread stacks for bug 40711

Attachment: bug40711.threads.txt (text/plain), 194.01 KiB.

[16 Dec 2008 9:47] Guilhem Bichot
could be similar to BUG#41395
[17 Jan 2009 15:07] Guilhem Bichot
Once again, maria_bulk_insert 5.1-maria pushbuild2, this push:
guilhem@mysql.co... 2009-01-16 22:42:09
[17 Feb 2009 11:46] Bugs System
Pushed into 6.0.10-alpha (revid:serg@mysql.com-20090217113558-vpsqsyjule7nz0gk) (version source revid:guilhem@mysql.com-20090213163054-rsg204z5qzcekbfe) (merge vers: 6.0.10-alpha) (pib:6)
[7 May 2009 8:19] MC Brown
Internetl only. No changelog entry required.
[7 May 2009 8:19] MC Brown
Internal only. No changelog entry required.