Fixes Bug #40711 "Maria crash in my_no_flags_free"

storage/maria/ma_close.c:
  Reset state_history when closing file.
  This fixes a race condition when the checkpoint is using the file while the file is beeing closed.
  The bug was that checkpoint was accessing the freed state_history.